[gd_scene load_steps=3 format=3 uid="uid://cjp8uk6p1a5l7"]

[ext_resource type="Script" path="res://menus/main_menu.gd" id="1_20biu"]
[ext_resource type="LabelSettings" uid="uid://dhbiycipdoc0d" path="res://menus/header_label_settings.tres" id="2_3q8jx"]

[node name="MainMenu" type="ColorRect" node_paths=PackedStringArray("peer_name_line_edit", "lobby_connection_label", "logs", "menu", "set_name_menu")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_20biu")
peer_name_line_edit = NodePath("HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/VBoxContainer2/LineEdit")
lobby_connection_label = NodePath("HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/Label")
logs = NodePath("HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/VBoxContainer/Logs")
menu = NodePath("HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/VBoxContainer")
set_name_menu = NodePath("HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/VBoxContainer2")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PaddingLeft" type="Control" parent="HBoxContainer2"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="HBoxContainer2"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.325441, 0.325441, 0.325441, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2/ColorRect"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_right = 256.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="HBoxContainer2/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Hangman"
label_settings = ExtResource("2_3q8jx")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Lobby Service: Disconnected"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
placeholder_text = "Name:"
alignment = 1

[node name="SetName" type="Button" parent="HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Set name"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonJoinPublic" type="Button" parent="HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Browse Lobbies"

[node name="ButtonLobby" type="Button" parent="HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Host Lobby"

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonCredits" type="Button" parent="HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Logs" type="Label" parent="HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PaddingRight" type="Control" parent="HBoxContainer2"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[connection signal="pressed" from="HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/VBoxContainer2/SetName" to="." method="_on_set_name_pressed"]
[connection signal="pressed" from="HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/VBoxContainer/ButtonJoinPublic" to="." method="_on_button_join_public_pressed"]
[connection signal="pressed" from="HBoxContainer2/ColorRect/VBoxContainer/VBoxContainer/VBoxContainer/ButtonLobby" to="." method="_on_button_lobby_pressed"]
